implement language switcher (WIP)

--- a/src/styles/generalStyle.css
+++ b/src/styles/generalStyle.css
@@ -9,6 +9,15 @@
     --background-color: white;
     --navbar-shadow: gray;
     --highlight-color: brown;
+    --highlight-color-secondary: #00aaff;
+    --background-gradient-color: rgb(200,200,200);
+    --homepage-background: url('../assets/homepage-background-light.jpg');
+
+    --vt-color-bg: #ddd;
+    --vt-color-text: #1a1e24;
+    --vt-color-text-subtle: #d76d77;
+    --vt-color-btn: #881823;
+    --vt-color-btn-hover: #460c12;
 
     --black-gradient: radial-gradient(circle at 100%, rgb(20,20,20) 30%, rgb(100, 100, 100) 50%, rgb(20,20,20) 70%);
     --white-active-background: linear-gradient(90deg, rgb(0,0,0,0) 0%, rgb(64,64,64,1) 50%, rgb(0,0,0,0) 100%);
@@ -17,6 +26,9 @@
 html{
     background-color: var(--background-color);
     transition: background-color 1s;
+}
+html *:is(span), *:is(h1) {
+    transition: color .8s;
 }
 .primaryAction {
     background: linear-gradient(90deg, var(--primary-color) 0%, var(--secondary-hover-color) 50%, var(--primary-color) 100%);
@@ -58,7 +70,7 @@ html, body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 130px);
     min-height: fit-content;
     gap: 20px;
     padding-top: 130px;
@@ -68,12 +80,12 @@ html, body{
 a {
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
 }
 a:hover {
     background-color: var(--secondary-hover-color);
 }
 #name {
-    text-align: left;
     font-weight: bolder;
 }
 #name span:nth-child(1){
@@ -121,4 +133,53 @@ a:hover {
      font-weight: bold;
  }
 
+/*Transition Animation*/
+.slide-fade-enter-active,
+.slide-fade-leave-active {
+    transition: transform 1s, opacity 1s;
+}
+.slide-fade-leave-to {
+    transform: translateY(-130%);
+    opacity: 0;
+}
+.slide-fade-enter-from{
+    transform: translateY(130%);
+    opacity: 1;
+}
 
+.slide-fade-in-enter-active,
+.slide-fade-in-leave-active {
+    transition: transform 1s, opacity 1s;
+}
+.slide-fade-in-leave-to {
+    transform: translateY(100%);
+    opacity: 0;
+}
+.slide-fade-in-enter-from{
+    transform: translateY(50%);
+    opacity: 1;
+}
+
+.slide-fade-X-enter-active,
+.slide-fade-X-leave-active {
+    transition: transform 1s, opacity 1s;
+}
+.slide-fade-X-leave-to {
+    transform: translateX(-130%);
+    opacity: 0;
+}
+.slide-fade-X-enter-from{
+    transform: translateX(130%);
+    opacity: 1;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity 1s ease;
+}
+.fade-leave-to {
+    opacity: 0;
+}
+.fade-enter-from{
+    opacity: 1;
+}
