--- a/src/styles/darkMode.css
+++ b/src/styles/darkMode.css
@@ -9,8 +9,18 @@
     --background-color : rgb(25,39,52);
     --navbar-shadow: black;
     --highlight-color: pink;
+    --highlight-color-secondary: #66ccff;
+    --background-gradient-color: black;
+    --homepage-background: url('../assets/homepage-background-dark.jpg');
+
+
+    --vt-color-bg: #252a33;
+    --vt-color-text: #eee;
+    --vt-color-text-subtle: #a2a2a2;
+    --vt-color-btn: #aebbff;
+    --vt-color-btn-hover: #fa0;
 }
 /*Dark Mode transition*/
-span, .languages .entry, .navbar, .latest-project, #app .card:not(.transparent){
-    transition: background-color .8s;
+span, .languages .entry, .navbar, .latest-project, #app .card:not(.transparent), .v-termynal {
+    transition: background-color .8s, color .2s;
 }
